--- a/StudentAccounting/ClientApp/src/components/style/StudentProfile.css
+++ b/StudentAccounting/ClientApp/src/components/style/StudentProfile.css
@@ -5,8 +5,11 @@
   text-align: right;
 }
 
-.drobBtn {
-  display: block;
+.myCousesBtn {
   margin-left: auto;
   margin-right: auto;
+}
+
+.udBtn {
+  width: 157px;
 }
