--- a/RazorClassLibrary/Views/Shared/EmailLayout.cshtml
+++ b/RazorClassLibrary/Views/Shared/EmailLayout.cshtml
@@ -95,7 +95,7 @@
     <table border="0" cellpadding="0" cellspacing="0" width="100%">
         <!-- LOGO -->
         <tr>
-            <td bgcolor="#539be2" align="center">
+            <td bgcolor="#001629" align="center">
                
                 <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                     <tr>
@@ -108,7 +108,7 @@
         </tr>
         <!-- HERO -->
         <tr>
-            <td bgcolor="#539be2" align="center" style="padding: 0px 10px 0px 10px;">
+            <td bgcolor="#001629" align="center" style="padding: 0px 10px 0px 10px;">
                 <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                     <tr>
                         <td bgcolor="#ffffff" align="center" valign="top" style="padding: 40px 20px 20px 20px; border-radius: 4px 4px 0px 0px; color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 48px; font-weight: 400; letter-spacing: 4px; line-height: 48px;">
